# anstosstools

./: .coveragerc  .env_vars  .sonarcloud.properties  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci_master.yml
Documents/: Anstoss 3 DB Files Master.xlsm  Design Decisions.txt  Design Thoughts.txt
Requirements/: requirements-dev-testing.txt
anstosstools/: data.py
anstosstools/anstoss_3/: __init__.py  sav_manager.py
dev/: run_linters.bat  run_linters.sh
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
dev/Packaging/: upload_to_pypi.bat  upload_to_pypi_test.bat
dev/Testing/: RunPytest.bat  RunPytest.sh
tests/: conftest.py
tests/anstosstools/: test_project_logger.py
tests/anstosstools/integration/Anstoss3/v1.40/: test_convert_sav_data.py
tests/anstosstools/integration/TestFiles/Anstoss3/v1.40/: AVereine.sav  Bonus1.sav  CLeague.sav  EMWM.sav  ExSpiel.sav  Fangesa.sav  Fanwaves.sav  ISchiris.sav  Internat.sav  Jugend1.sav  Jugend10.sav  Jugend11.sav  Jugend12.sav  Jugend13.sav  Jugend14.sav  Jugend15.sav  Jugend16.sav  Jugend17.sav  Jugend18.sav  Jugend2.sav  Jugend3.sav  Jugend4.sav  Jugend5.sav  Jugend6.sav  Jugend7.sav  Jugend8.sav  Jugend9.sav  Kleinig.sav  Laender.sav  LandDeut.sav  LandEngl.sav  LandFran.sav  LandHoll.sav  LandItal.sav  LandOest.sav  LandPort.sav  LandScho.sav  LandSchw.sav  (+30 more)
tests/anstosstools/unit/: test_data_nation.py
tests/anstosstools/unit/anstoss_3/: test_sav_manager.py
