[bdist_wheel]
universal = true

[metadata]
name = "anstosstools"
version = 0.1.0
author = Eric Ziethen
author-email = ericziethen@gmail.com
home-page = https://github.com/ericziethen/anstosstools
description = Various tools to work with Anstoss Game data
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
packages=find:

[options.packages.find]
exclude =
    tests
